# scatter-send

./: .gitignore  Cargo.toml
src/: main.rs
src/file/: mod.rs
src/file/methods/: collect.rs  mod.rs  scatter.rs
