[package]
name = "scatter-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"
iroh = "0.91.1"
n0-future = "0.2.0"
ps-base64 = "0.1.0-5"
ps-hkey = "0.1.0-24"
ps-mmap = "0.1.0-12"
ps-range = "0.1.0-2"
ps-str = "0.1.0-2"
scatter-net = { path = "../scatter-net" }
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = "1.47.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
