[package]
name = "scatter-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
iroh = "0.95.1"
n0-future = "0.3.1"
ps-base64 = "0.1.0-6"
ps-hkey = "0.1.0-32"
ps-mmap = "0.1.0-14"
ps-range = "0.1.0-3"
ps-str = "0.1.0-3"
scatter-net = { path = "../scatter-net" }
serde = "1.0.228"
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = "1.48.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
